--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -15,6 +15,9 @@ jobs:
         node-version: '16'
     - name: npm install
       run: npm install
-    - name: lint
-      run: npm run eslint
-
+#    - name: lint
+#      run: npm run eslint
+    - name: build
+      run: npm run build
+    - name: run
+      run: npm run start-prod
